# playground

./: .gitignore
asm/exit/: exit.asm
asm/hello/: Makefile  hello  hello.asm  hello.lst  hello32  hello32.asm  hello32.lst
c/: fstr.c  structs.c  tabbed_braces.c  tabbed_drawtitle.c
c/c_fundamentals/: pun  pun.c
c/fold_left/: fold_left.c
c/memory/: Makefile  numbers.c
c/pointers/: function_pointers  function_pointers.c  pointers  pointers.c
c/sample/: function.c  main.c
c/static_function_variable/: function.c  function.h  main  main.c
c/unity/: math_test.c
c/value_reference/: value_reference  value_reference.c
cpp/: .gitignore
cpp/atomic/: build.ninja  main.cpp
cpp/classes/constructors/: CMakeLists.txt
cpp/classes/constructors/explicit/: CMakeLists.txt  main.cpp
cpp/classes/constructors/include/libexplicit/: libexplicit.hpp
cpp/classes/constructors/include/libmembers_initialization/: libmembers_initialization.hpp
cpp/classes/constructors/members_initialization/: CMakeLists.txt  members_initialization.cpp
cpp/classes/constructors/src/explicit/: CMakeLists.txt  libexplicit.cpp
cpp/classes/constructors/src/members_initialization/: CMakeLists.txt  libmembers_initialization.cpp
cpp/constexpr/: main.cpp  math.cpp
cpp/constructors/: build.ninja  main.cpp
cpp/export-import/: main.cpp  message.cpp
cpp/friend_functions/: main.cpp
cpp/fundamentals/print/base/: .clangd  CMakeLists.txt  main.cpp  main_test.cpp  person.cpp  person.hpp
cpp/helloworld/: main.cpp
cpp/import_std/: CMakeLists.txt  main.cpp  uses_std.cpp
cpp/learn_cpp/sample-0002/source/: CMakeLists.txt  README.md  main.cpp
cpp/learn_cpp/sample-0004/source/: .clangd  CMakeLists.txt  README.md  main.cpp
cpp/learn_cpp/sample-0006/source/: .clangd  CMakeLists.txt  main.cc
cpp/learn_cpp/sample-0007/source/: .neocmake.toml  CMakeLists.txt  main.cc
cpp/main_function/env/: CMakeLists.txt  main.cpp
cpp/oop/source/: CMakeLists.txt  main.cpp
cpp/qt_hello/: Makefile  hello.cpp  hello.pro
cpp/structural_binding/base/: CMakeLists.txt  main  main.cpp
cpp/templates/template_specialization/: CMakeLists.txt  main.cpp
cpp/virtual/base/: CMakeLists.txt  main.cpp  main.hpp  main_test.cpp
docker/building-two-images-with-a-single-dockerfile/: Dockerfile  README.md
docker/learn_docker/: copilot.md
docker/packaging/: Dockerfile  data.txt
docker/stop-at-specific-stage/: Dockerfile  README.md
docker/volumes/: Dockerfile  compose.yml
docker/web-ping/: Dockerfile  README.md  app.mjs
erlang/archive/: hackney_http_spec.erl  rabbit.erl
erlang/dialyzer/: .erlang  Makefile  rabbit.erl  sample01.erl  walks.erl
gtest/base/: CMakeLists.txt  base_test.cpp  main_test.cpp
java/: List.java  VariableSteps.java  rabbit.java  spark.java
javascript/: alice.mjs  async.js  average.js  batch_convert.js  cartesian_product-recursive.js  check_this_value_in_child.js  collections.js  curry.js  custom_type.js  dimension_sort.js  empty_condition.js  for_tail.js  function_call.js  get_props.js  hex_of_int.js  insert.js  iterations.js  javafx_script_application.js  join.js  js_type_dec.js  lazy.js  lists.js  mousemove.js  object.js  optional.js  package.json  partial_application_with_bind.js  pipe.js  promises-2.js  promises.js  range.js  repl.mjs  rgb_component.js  set.js  symbol-has-instance.js  symbols.js  table.mjs  tagged_strings.js  this.js  utils.mjs  (+3 more)
javascript/blocks/: sample.js
javascript/call_stack/: call_stack.js
javascript/cluster/: cluster.mjs
javascript/data_end/: index.html  index.js  package-lock.json  package.json
javascript/log/: npm.error  npm.info
javascript/modules/: index.html  log.js  sample.js
javascript/promises/: package.json  sample.js
javascript/prototypes/: sample.js
javascript/ref_unref/: sample.mjs
make/: Makefile
make/make_two/: Makefile
ninja/: build.ninja  main.cpp
ninja/base/: build.ninja  main.cpp
ocaml/: attributes.ml  data_read.ml  dependent_types.ml  insert_sort.ml  quotations.ml  sample.ml  sample_ppx.ml
ocaml/freq/: freq.ml
qt/: .gitignore
qt/learn_qt/sample-0001/source/: .clang-format  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  counter.hh  main.cc  sample.cc  sample.hh
qt/learn_qt/sample-0002/source/: CMakeLists.txt  README.md  main.cc
qt/learn_qt/sample-0003/source/: CMakeLists.txt  counter.cc  counter.hh
qt/learn_qt/sample-0004/source/: .clangd  CMakeLists.txt  CMakePresets.json  README.md  main.cc  sample.cc  sample.hh
qt/list_view/: Makefile  data_object.cpp  data_object.h  list_view.pro  main.cpp  main.qml  qrc_resources.cpp  resources.qrc
qt/objectlistmodel/: Makefile  moc_dataobject.cpp  objectlistmodel  qrc_objectlistmodel.cpp
qt/rounded_rectangle/: Makefile  main.cpp  main.qml  (+3 more)
rspec/: .gitignore
ruby/: 256colors3.pl  associations.rb  breakdance.rb  capybara_getting_cookies.rb  cartesian_product.rb  check_for_nil.rb  companion_object.rb  comprehensions.rb  data_end.rb  deconstruct_keys.rb  define_method.rb  fd_close.rb  guilds.rb  hash_to_proc.rb  hubspot_api.rb  insert.rb  keyword_arguments.rb  memoization.rb  method_reference.rb  pipe_operator.rb  playing_with_then_and_then.rb  push_data_to_connection.rb  rbs_types.rb  refinements_implicit_conversion.rb  stack_overflow_depth.rb  tarai.rb  tempfile.rb  termcolors1.rb  termcolors2.rb  termcolors3.rb  the_essence_of_ruby.rb  user_spec.rb  yield_persons.rb
rust/learn_rust/sample-0004/: Cargo.toml  README.md  build.rs
rust/learn_rust/sample-0004/src/: main.rs
rust/learn_rust/sample-0004/ui/: app-window.slint
shell/: ansi  arrays  builtin_commands  codecs  conditions  contrib-zcalc  downto  exceptions  functions  globbing  history  hooks  iterators  parameter_expansion  parse_input  parse_options  perform  processes  progress  rofi  rofi-script.sh  stream_editing  subshell  utility
vim/: buffers.vim  dictionaries.vim  export_import.vim  functions.vim  fzf-buffers.vim  fzf-files.vim  fzf-numbers.vim  lambda_chain.vim  lambda_term.vim  lists.vim  popup.vim  popup_term.vim  source.vim  string_interpolation.vim
wasm/: sample.wat
(+1315 files in other folders)
